# rocm-counter-daemon

./: CMakeLists.txt  LICENSE  README.md  config-0  config-1  config-2  config-3  daemon.cpp  gpu-counter-opt.lua  gpu-power-cap.lua  olcf_derived_metrics.yaml  rocm-counter-epilogue.py  rocm-counter-prologue.py
